testsuite/tests/rename/should_fail/T5281.hs
-- The issue here is getting an error message with a decent source location
module T5281 where

import T5281A

x = deprec


